--- a/nav-practice.css
+++ b/nav-practice.css
@@ -19,22 +19,6 @@ body {
     box-shadow: 0 0 15px rgba(207, 206, 206, 0.25);
 }
 
-@media(max-width: 700px) {
-    .navbar {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    li {
-        margin-bottom: 1em;
-    }
-
-    #img {
-        margin-bottom: 0;
-    }
-}
-
 li {
     margin-top: 1em;
 }
@@ -88,7 +72,7 @@ h1 {
     text-decoration: underline;
 }
 
-h3 {
+.border-card > h3 {
     margin: auto;
     text-align: left;
     font-family: "libre baskerville",serif;
@@ -132,19 +116,56 @@ footer {
     background-color: midnightblue;
 }
 
+.flex-footer > h3 {
+    font-family: "libre baskerville",serif;
+    font-style: italic;
+}
+
 .email-form {
     display: flex;
-    flex-flow: column wrap;
-    gap: .3em;
+    flex-flow: row wrap;
     justify-items: center;
+}
+
+#email {
+    padding: .4em;
+    font-size: 24px;
+    border: 0;
 }
 
 .btn {
     background-image: linear-gradient(45deg, #ff8a00, #e52e71);
-    border: none;
-    border-radius: 16px;
+    color: #fff;
+    border: 0;
+    /* border-radius: 16px; */
+    padding: .4em;
+    font-size: 24px;
 }
 
 .btn:hover {
     cursor: pointer;
+}
+
+@media(max-width: 700px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    li {
+        margin-bottom: 1em;
+    }
+
+    #img {
+        margin-bottom: 0;
+    }
+
+    .main-grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2em;
+        margin: 1em;
+        padding: 1em;
+    }
 }
