--- a/nav-practice.css
+++ b/nav-practice.css
@@ -61,6 +61,7 @@ img {
     box-shadow: 4px 8px 15px rgba(207, 206, 206, 0.25);
     margin: 1em auto;
     padding: 2em;
+    white-space: pre-line;
 }
 
 h1 {
@@ -159,6 +160,15 @@ footer {
 
     #img {
         margin-bottom: 0;
+    }
+    
+    h1 {
+        margin: auto auto .3em;
+        text-align: left;
+        font-family: 'Libre Baskerville', serif;
+        font-size: 2em;
+        font-weight: 700;
+        text-decoration: underline;
     }
 
     .main-grid-container {
