--- a/nav-practice.css
+++ b/nav-practice.css
@@ -138,7 +138,6 @@ footer {
     background-image: linear-gradient(45deg, #ff8a00, #e52e71);
     color: #fff;
     border: 0;
-    /* border-radius: 16px; */
     padding: .4em;
     font-size: 24px;
 }
@@ -215,5 +214,43 @@ footer {
         padding: 2em;
         color: #fff;
         background-color: midnightblue;
+    }
+
+    #email {
+        padding: .4em;
+        font-size: 16px;
+        border: 0;
+    }
+    
+    .btn {
+        background-image: linear-gradient(45deg, #ff8a00, #e52e71);
+        color: #fff;
+        border: 0;
+        padding: .4em;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 400px) {
+    .main-grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2em;
+        margin: 1em;
+        padding: 1em;
+    }
+
+    #email {
+        padding: .4em;
+        font-size: 12px;
+        border: 0;
+    }
+    
+    .btn {
+        background-image: linear-gradient(45deg, #ff8a00, #e52e71);
+        color: #fff;
+        border: 0;
+        padding: .4em;
+        font-size: 12px;
     }
 }
